# fresh-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LSP_ARCHITECTURE.md  NEW_ARCHITECTURE.md  PLAN.md  PLAN_composite_rendering_reuse.md  README.md  TESTS_STATUS.md  TODO.md  build.rs  flake.nix  index.html  test.rs  test_diff.ts
.github/workflows/: ci.yml  flatpak-build.yml  linux-packages.yml  npm-publish.yml  release.yml  theme-screenshots.yml
benches/: fresh_benchmarks.rs
crates/fresh-core/: Cargo.toml
crates/fresh-editor/: Cargo.toml  build.rs
crates/fresh-gui/: Cargo.toml
crates/fresh-languages/: Cargo.toml
crates/fresh-plugin-api-macros/: Cargo.toml
crates/fresh-plugin-runtime/: Cargo.toml
crates/fresh-update/: Cargo.toml  build.rs
crates/fresh-update/src/: channel.rs  check.rs  confidence.rs  heuristic.rs  lib.rs  provenance.rs  receipt.rs  registry.rs  self_update.rs  version.rs
debian/: rules
docs/: ARCHITECTURE.md  CONFIG_EDITOR_DESIGN.md  CR.md  DOCUMENT_MODEL_STATUS.md  MULTI_BUFFER_SINGLE_TAB_RESEARCH.md  PROCESS_LIMITS.md  REWRITE.md  SCROLL_SYNC_DESIGN.md  SLOW_BACKEND_TESTING.md  TODO.md  USER_GUIDE.md  VISUAL_REGRESSION_TESTING.md  i18n.md  plugin-api.md  quickjs-migration-plan.md  quickjs-migration.md  theme-screenshot-diff.md
docs/.vitepress/: config.ts
docs/blog/: index.md
docs/features/: encoding.md  index.md  search-replace.md  session-persistence.md
docs/internal/: 00-overview.md  AUTHORITY_DESIGN.md  DEVCONTAINER_REMEDIATION_PLAN.md  DEVCONTAINER_SPEC_GAP_PLAN.md  DEVCONTAINER_SPEC_TEST_GAPS.md  EKS_S3_AUTHORITY_DESIGN.md  EKS_WORKSPACE_UX_DESIGN.md  NON_TERMINAL_UI_RESEARCH.md  ORCHESTRATOR_DOCK_NNG_FINDINGS.md  PLUGIN_ARCHITECTURE_PLAN.md  README.md  UNIFIED_SCENE_DESIGN.md  buffers-splits-undo.md  cli-redesign.md  config-themes-settings.md  design-decisions.md  docs-audit-0.2.13.md  editor-modules-refactor-plan.md  editor-ux-features.md  embedded-language-highlighting.md  glossary.md  input-keybindings-actions.md  lsp.md  macro-system-improvements.md  orchestrator-sessions.md  packaging-self-update.md  plugins.md  project-search-replace.md  remote-authority-trust.md  rendering-and-layout.md  search-and-diff.md  settings-ui-improvement-plan.md  settings-widget-unification-plan.md  syntax-highlighting.md  terminal-drag-select-exit-analysis.md  terminal.md  testing.md  text-model.md  virtual-space-scoping.md  web-ui.md  (+1 more)
docs/plugins/: index.md
docs/screenshots/: screenshot-x11.sh  screenshot.sh  shots.sh
examples/: file_explorer_demo.rs
keymaps/: default.json
locales/: cs.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  zh-CN.json
plugins/: audit_mode.ts  config-schema.json  config_editor.ts  diagnostics_panel.ts  git_blame.ts  git_log.ts  manual_help.ts  markdown_compose.ts  merge_conflict.ts  search_replace.ts  theme_editor.ts
plugins/lib/: ascii-animation.ts  finder.ts  fresh.d.ts  index.ts
scripts/: bump-version.py  install.sh  write-install-receipt.sh
src/: actions.rs  ansi_background.rs  buffer.rs  chunk_tree.rs  commands.rs  config.rs  config_io.rs  cursor.rs  editor.rs  event.rs  event_hooks.rs  highlighter.rs  hooks.rs  indent.rs  keybindings.rs  lib.rs  line_anchor.rs  line_cache.rs  lsp.rs  lsp_diagnostics.rs  lsp_manager.rs  main.rs  margin.rs  marker.rs  multi_cursor.rs  overlay.rs  partial_config.rs  persistence.rs  piece_tree.rs  plugin_api.rs  plugin_thread.rs  popup.rs  selection.rs  split.rs  state.rs  text_buffer.rs  ts_runtime.rs  types.rs  viewport.rs  virtual_file.rs  (+1 more)
src/app/: async_messages.rs  clipboard.rs  composite_buffer_actions.rs  file_explorer.rs  file_operations.rs  input.rs  input_dispatch.rs  lsp_requests.rs  mod.rs  mouse_input.rs  plugin_commands.rs  popup_actions.rs  prompt_actions.rs  render.rs  session.rs  shell_command.rs  tab_drag.rs  types.rs
src/editor/: input.rs  mod.rs  render.rs
src/fs/: slow.rs
src/input/: action.rs  actions.rs  command_registry.rs  commands.rs  composite_router.rs  handler.rs  keybindings.rs
src/model/: buffer.rs  cursor.rs  event.rs  filesystem.rs  mod.rs  piece_tree.rs
src/navigation/: action_convert.rs  edit_map.rs  layout_nav.rs  mapping.rs  mod.rs
src/primitives/: grammar_registry.rs  highlight_engine.rs  highlighter.rs  mod.rs
src/services/: async_bridge.rs  clipboard.rs  process_limits.rs  styled_image.rs
src/ui/: status_bar.rs  (+2 more)
tests/: integration_tests.rs  test_line_iterator_comprehensive.rs  test_offset_to_position.rs  test_overlay_colors.rs
tests/terminal_cleanup_test/: Cargo.toml  README.md  capture_sequences.rs  check_keyboard_state.sh  test_buggy_order.sh  test_fixed_order.sh
tests/terminal_cleanup_test/src/: main.rs
types/: fresh.d.ts.template
web-ui/: README.md  index.html  shell.html
(+518 files in other folders)
