[package]
name = "fresh-update"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic install provenance and self-update engine for the fresh editor: reads an install receipt (or embedded/heuristic fallback) to know exactly how fresh was installed, then updates through the same mechanism"
keywords = ["packaging", "self-update", "provenance", "installer", "cli"]
categories = ["command-line-utilities", "config"]

[lib]
name = "fresh_update"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
toml = "0.8"
sha2 = "0.10"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.25"
